[package]
name = "arrow_benchmark"
version = "0.1.0"
authors = ["Yordan Pavlov <yordan.pavlov@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
chrono = "0.4.11"
#arrow = "0.17.0"
criterion = "0.3"
packed_simd = "0.3.3"

[dependencies.arrow]
version = "0.18.0-SNAPSHOT"
default-features = false
features = ["simd"]
#path = "..\\..\\..\\arrow\\rust\\arrow"
git = "https://github.com/yordan-pavlov/arrow"

#[dev-dependencies]
#criterion = "0.3"

[[bench]]
name = "arrow_benchmark"
harness = false
path = "src/main.rs"

[profile.release]
debug = true
